--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/avatars/
+    - assets/stories/
     - assets/posts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
